--- a/styles/globals.css
+++ b/styles/globals.css
@@ -85,10 +85,20 @@ body{
     @apply bg-gradient-to-r from-amber-500 via-orange-600 to-yellow-500 bg-clip-text text-transparent;
 }
 
+.text {
+    @apply text-gray-900 text-lg
+}
+
 .btn {
     @apply py-2 px-4 rounded-full bg-orange-500 shadow-2xl transition ease-in-out duration-200
     flex justify-center items-center cursor-pointer text-2xl min-w-32 font-semibold text-gray-900
     hover:shadow-xl hover:translate-y-0.5 hover:text-white;
+}
+
+.btn_small {
+    @apply py-1 px-6 rounded-full bg-orange-500 shadow-2xl transition ease-in-out duration-200
+    flex justify-center items-center cursor-pointer font-semibold text-gray-900
+    hover:shadow-xl hover:translate-y-0.5 hover:text-white
 }
 
 .dice {
