--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,7 +98,8 @@ body{
 .btn_small {
     @apply py-1 px-6 rounded-full bg-orange-500 shadow-2xl transition ease-in-out duration-200
     flex justify-center items-center cursor-pointer font-semibold text-gray-900
-    hover:shadow-xl hover:translate-y-0.5 hover:text-white
+    enabled:hover:shadow-xl enabled:hover:translate-y-0.5 hover:text-white
+    disabled:bg-gray-300 disabled:text-gray-400
 }
 
 .dice {
