--- a/styles/globals.css
+++ b/styles/globals.css
@@ -103,7 +103,7 @@ body{
 }
 
 .dice {
-    @apply mx-auto min-w-128 grid grid-cols-3 gap-10;
+    @apply h-60 mx-auto min-w-128 grid grid-cols-3 gap-10;
 }
 
 .die {
