--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,6 +89,18 @@ body{
     @apply text-gray-900 text-lg
 }
 
+.rule {
+    @apply text-gray-900 text-justify font-medium bg-white rounded-lg p-2 shadow-lg bg-orange-200
+}
+
+.rule_text_header {
+    @apply text-gray-900 text-xl font-semibold
+}
+
+.rule_text_note {
+    @apply text-gray-900 text-justify italic font-satoshi block font-normal
+}
+
 .btn {
     @apply py-2 px-4 rounded-full bg-orange-500 shadow-2xl transition ease-in-out duration-200
     flex justify-center items-center cursor-pointer text-2xl min-w-32 font-semibold text-gray-900
