--- a/styles/globals.css
+++ b/styles/globals.css
@@ -156,10 +156,20 @@ body{
 
 .objective_card {
     @apply shadow-2xl transition-transform cursor-pointer relative rounded-2xl overflow-clip
+    w-[272px] h-auto sm:w-[234px] md:w-[272px]
 }
 
-.objective_card:hover>div, .objective_card:active>div {
+.objective_description {
+    @apply w-[272px] h-full absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2
+    transition-transform duration-500 rounded-2xl bg-orange-300 p-4 sm:text-sm md:text-base sm:w-[234px] md:w-[272px]
+}
+
+.objective_card:hover>div {
     @apply scale-100
+}
+
+.blueprint_remainder_show {
+    @apply -translate-x-[147px] md:-translate-x-[203px]
 }
 
 .light_blue {
@@ -179,5 +189,5 @@ body{
 }
 
 .modal {
-    @apply fixed z-10 rounded-xl backdrop:bg-gray-800/20 p-8 shadow-lg transition-transform duration-300 ease-in-out
+    @apply fixed z-10 rounded-xl backdrop:bg-gray-800/20 p-4 md:p-8 shadow-lg transition-transform duration-300 ease-in-out
 }
