--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,21 @@
 
 body{
     height: 100vh;
+
+    &::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: white;
+        border-radius: 100px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: rgb(251 146 60);
+        border-radius: 100px;
+        border: 3px solid white;
+    }
 }
 
 .app {
@@ -189,5 +204,22 @@ body{
 }
 
 .modal {
+    &::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        background: rgb(251 146 60);
+        border-radius: 100px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: rgb(154 52 18);
+        border-radius: 100px;
+        border: 3px solid rgb(251 146 60);
+    }
+
     @apply fixed z-10 rounded-xl backdrop:bg-gray-800/20 p-4 md:p-8 shadow-lg transition-transform duration-300 ease-in-out
 }
