--- a/styles/globals.css
+++ b/styles/globals.css
@@ -224,3 +224,7 @@ body{
     @apply fixed z-10 rounded-xl backdrop:bg-gray-800/20 p-4 md:p-8 shadow-lg transition-transform duration-300 ease-in-out
 }
 
+.loader {
+    @apply fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 z-40
+}
+
