--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -149,7 +147,7 @@ body{
 }
 
 .btn {
-    @apply py-1 px-4 rounded-full bg-orange-500 shadow-2xl transition ease-in-out duration-200
+    @apply py-1 px-5 rounded-full bg-orange-500 shadow-2xl transition ease-in-out duration-200
     flex justify-center items-center cursor-pointer text-xl min-w-20 font-semibold text-gray-900
     hover:shadow-xl hover:translate-y-0.5 hover:text-white outline-0 sm:text-2xl sm:min-w-32 sm:py-2
 }
@@ -166,7 +164,7 @@ body{
 }
 
 .die {
-    @apply flex justify-center items-center w-20 h-20 sm:w-24 sm:h-24 border-[1px] border-gray-400 rounded-2xl shadow-lg
+    @apply flex justify-center items-center w-20 h-20 sm:w-24 sm:h-24 border-[1px] border-gray-400 rounded-2xl shadow-lg relative
 }
 
 .objective_card {
@@ -228,3 +226,22 @@ body{
     @apply fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 z-40
 }
 
+.base_die {
+    @apply bg-white
+}
+
+.lakes_die {
+    @apply bg-blue-200
+}
+
+.rivers_die {
+    @apply bg-blue-800
+}
+
+.volcano_die {
+    @apply bg-orange-400
+}
+
+.meteors_die {
+    @apply bg-orange-800
+}
