--- a/styles/globals.css
+++ b/styles/globals.css
@@ -150,13 +150,14 @@ body{
     @apply py-1 px-5 rounded-full bg-orange-500 shadow-2xl transition ease-in-out duration-200
     flex justify-center items-center cursor-pointer text-xl min-w-20 font-semibold text-gray-900
     hover:shadow-xl hover:translate-y-0.5 hover:text-white outline-0 sm:text-2xl sm:min-w-32 sm:py-2
+    focus:outline-0
 }
 
 .btn_small {
     @apply py-1 px-6 rounded-full bg-orange-500 shadow-2xl transition ease-in-out duration-200
     flex justify-center items-center cursor-pointer font-semibold text-gray-900
     enabled:hover:shadow-xl enabled:hover:translate-y-0.5 hover:text-white
-    disabled:bg-gray-300 disabled:text-gray-400 outline-0
+    disabled:bg-gray-300 disabled:text-gray-400 outline-0 focus:outline-0
 }
 
 .dice {
