--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,6 +51,10 @@ body{
     top: 0;
     opacity: 0.4;
     filter: invert(1);
+
+    &:focus {
+        outline: none;
+    }
 }
 
 .gradient {
@@ -147,6 +151,12 @@ body{
 }
 
 .btn {
+    outline: none !important;
+
+    &:focus {
+        outline: none;
+    }
+
     @apply py-1 px-5 rounded-full bg-orange-500 shadow-2xl transition ease-in-out duration-200
     flex justify-center items-center cursor-pointer text-xl min-w-20 font-semibold text-gray-900
     hover:shadow-xl hover:translate-y-0.5 hover:text-white outline-0 sm:text-2xl sm:min-w-32 sm:py-2
@@ -154,6 +164,12 @@ body{
 }
 
 .btn_small {
+    outline: none !important;
+
+    &:focus {
+        outline: none;
+    }
+
     @apply py-1 px-6 rounded-full bg-orange-500 shadow-2xl transition ease-in-out duration-200
     flex justify-center items-center cursor-pointer font-semibold text-gray-900
     enabled:hover:shadow-xl enabled:hover:translate-y-0.5 hover:text-white
