--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,7 +53,7 @@ body{
     filter: invert(1);
 
     &:focus {
-        outline: none;
+        outline: none !important;
     }
 }
 
@@ -153,10 +153,6 @@ body{
 .btn {
     outline: none !important;
 
-    &:focus {
-        outline: none;
-    }
-
     @apply py-1 px-5 rounded-full bg-orange-500 shadow-2xl transition ease-in-out duration-200
     flex justify-center items-center cursor-pointer text-xl min-w-20 font-semibold text-gray-900
     hover:shadow-xl hover:translate-y-0.5 hover:text-white outline-0 sm:text-2xl sm:min-w-32 sm:py-2
@@ -165,10 +161,6 @@ body{
 
 .btn_small {
     outline: none !important;
-
-    &:focus {
-        outline: none;
-    }
 
     @apply py-1 px-6 rounded-full bg-orange-500 shadow-2xl transition ease-in-out duration-200
     flex justify-center items-center cursor-pointer font-semibold text-gray-900
